Bug 41561 - Folder panel does not show scrollbar

--- a/sugarcrm/modules/Emails/EmailUI.css
+++ b/sugarcrm/modules/Emails/EmailUI.css
@@ -259,6 +259,8 @@ li.yuimenuitem-disabled {
 }
 #lefttabs .yui-content {
     border: none;  
+   	overflow: auto;
+    
 }
 
 #lefttabs .yui-dt-empty {
